--- a/.github/workflows/component-detection.yml
+++ b/.github/workflows/component-detection.yml
@@ -16,10 +16,11 @@ jobs:
   
     runs-on: ${{ matrix.runner }}
     steps:      
+      - uses: actions/checkout@v3
       - name: Dotnet Info
         run: dotnet --info        
       - name: Build
-        run: dotnet build ProCodeGuide.Samples.Automapper.sln
+        run: dotnet build
       - name: Component detection 
         ##if: runner.os != 'Windows'
         uses: advanced-security/component-detection-dependency-submission-action@v0.0.1
