--- a/.github/workflows/component-detection.yml
+++ b/.github/workflows/component-detection.yml
@@ -17,8 +17,14 @@ jobs:
     runs-on: ${{ matrix.runner }}
     steps:      
       - uses: actions/checkout@v3
-      - name: Dotnet Info
-        run: dotnet --info        
+      - name: Dotnet Info Before
+        run: dotnet --info
+      # https://dotnet.microsoft.com/en-us/download/dotnet/3.1
+      - name: Setup .NET Core SDK to 3.1.12 (3.1.406 SDK) version
+        uses: actions/setup-dotnet@v3.0.3
+        with:
+          # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x, 3.x
+          dotnet-version: 3.1.406        
       - name: Build
         run: dotnet build
       - name: Component detection 
