--- a/.github/workflows/component-detection.yml
+++ b/.github/workflows/component-detection.yml
@@ -28,21 +28,20 @@ jobs:
       - name: Build
         run: dotnet build
       - name: Component detection 
-        ##if: runner.os != 'Windows'
+        ##https://github.com/advanced-security/component-detection-dependency-submission-action/issues/19
+        if: runner.os != 'Windows'
         uses: advanced-security/component-detection-dependency-submission-action@v0.0.1
         
-     #- name: Run Trivy in GitHub SBOM mode and submit results to Dependency Snapshots
-     #  if: runner.os != 'Windows'
-     #  uses: aquasecurity/trivy-action@master
-     #  with:
-     #    scan-type: 'fs'
-     #    format: 'github'
-     #    output: 'dependency-results.sbom.json'
-     #    #image-ref: '.'
-     #    github-pat: '${{ secrets.GITHUB_TOKEN }}'
+      - name: Run Trivy in GitHub SBOM mode and submit results to Dependency Snapshots
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          format: 'github'
+          output: 'dependency-results.sbom.json'
+          #image-ref: '.'
+          github-pat: '${{ secrets.GITHUB_TOKEN }}'
      
-     #- uses: anchore/sbom-action@v0
-     #  if: runner.os != 'Windows'
-     #  with:
-     #    path: .
-     #    dependency-snapshot: true
+      - uses: anchore/sbom-action@v0
+        with:
+          path: .
+          dependency-snapshot: true
