--- a/.github/workflows/component-detection.yml
+++ b/.github/workflows/component-detection.yml
@@ -29,8 +29,9 @@ jobs:
         run: dotnet build
       - name: Component detection 
         ##https://github.com/advanced-security/component-detection-dependency-submission-action/issues/19
-        if: runner.os != 'Windows'
-        uses: advanced-security/component-detection-dependency-submission-action@v0.0.1
+        ##if: runner.os != 'Windows'
+        ##uses: advanced-security/component-detection-dependency-submission-action@v0.0.1
+        uses: felickz/component-detection-dependency-submission-action@windows
         
       - name: Run Trivy in GitHub SBOM mode and submit results to Dependency Snapshots
         ## Error: Container action is only supported on Linux
